examples/bad/lack-of-semicolon.hp
def f :: Int -> Int x = x + 1;


f 1


def x :: Int = 5;
